# entt-test

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  build.sh  run.sh
res/shaders/: model.frag  model.vert  shader.vert
src/: app.cpp  app.hpp  main.cpp
src/core/: app.hpp  window.cpp  window.hpp
src/gfx/: camera.cpp  camera.h  mesh.h  model.h  renderable.hpp  renderer.cpp  renderer.h  shader.h
